--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
@@ -26,8 +26,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mongodb": "^6.18.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1"
   }
 }
